Name:          uuid-quasi
Version:       0.1
Copyright:     (c) 2011 Lars Petersen
Author:        Lars Petersen
Maintainer:    info@lars-petersen.net
License:       BSD3
License-file:  LICENSE

Category:      Data
Build-Type:    Simple
Cabal-Version: >= 1.6

Description:
 This library is allows quasiquotation (expressions and patterns) of UUIDs.

Homepage:    http://github.com/lpeterse/uuid-quasi
Bug-Reports: mailto:info@lars-petersen.net

Extra-Source-Files:
     CHANGES
     CONTRIBUTORS

Library
 Build-Depends:   uuid, template-haskell, split, base >=3, base < 5 
 Exposed-Modules: Data.UUID.Quasi

 Ghc-Prof-Options:   -auto-all -caf-all
 Ghc-Options:        -Wall
